<resources>
    <string name="app_name">Ask For Help</string>
    <string name="link_to_github">
        <a href="https://github.com/broakenmedia/MultiContactPicker">MultiContactPicker by BrokenMedia</a>
    </string>
    <string name="view_license">View Apache License</string>
    <string name="shared_pref_error">There was an error getting shared preferences. Please close the app and restart it.</string>
    <string name="reset_app_choice">We cleared your preferences for which app to send the text with. Next time you send a text, please select which app to use when the prompt comes up.</string>
    <string name="location_access_needed">You cannot turn on location services right now because we do not have access to your phone\'s location. Would you like to give us access?</string>
    <string name="location_off_warning">Turning off location here will stop the app from sending a link to your location but will not rescind the app\'s permission to access it. If you don\'t want the app to be able to access your location anymore, go to your phone\'s settings app and change the permissions there.</string>
    <string name="contact_access_needed">This app is useless without access to your contacts. Please give us permission to read your contacts.</string>
    <string name="gps_access_needed">This app needs the GPS services to be enabled in order to send your location. Please enable it on the Location Services screen.</string>
    <string name="set_contacts_header">Set Contacts and Numbers</string>
    <string name="set_requests_header">Set Request Texts</string>
    <string name="enter_new_contact_group">Enter new contact group name</string>
    <string name="save_new_contact_group">Save new contact group</string>
    <string name="choose_contacts_header">Choose a group to message</string>
    <string name="choose_requests_header">Choose a message to send</string>
    <string name="enter_new_request">Enter new request text</string>
    <string name="save_new_request">Save new request text</string>
    <string name="keyboard_save">Save</string>
    <string name="set_requests">Set Requests</string>
    <string name="set_contacts_and_groups">Set Contact Groups and Numbers</string>
    <string name="restart_tutorial">Restart tutorial</string>
    <string name="location_off_on">Location Off/On</string>
    <string name="about">About</string>
    <string name="reset_default_app_choice">Reset default app choice</string>
    <string name="settings">Settings</string>
    <string name="location_on">on</string>
    <string name="location_off">off</string>
    <string name="blank_request">Enter Request Text Below</string>
    <string name="blank_contact_group1">Click to select contacts for Group 1</string>
    <string name="blank_contact_group2">Click to select contacts for Group 2</string>
    <string name="blank_contact_group3">Click to select contacts for Group 3</string>
    <string name="blank_contact_group4">Click to select contacts for Group 4</string>
    <string-array name="blank_contacts">
        <item>@string/blank_contact_group1</item>
        <item>@string/blank_contact_group2</item>
        <item>@string/blank_contact_group3</item>
        <item>@string/blank_contact_group4</item>
    </string-array>
    <string name="about_text">This app is a streamlined messaging app. It is not meant to be used instead of 911. \n This app uses code from an outside library te select multiple contacts in the settings page. The library we used, MultiContactPicker, is licensed under the Apache License 2.0. Here is the link to the github repository of the code we used:</string>
    <string name="unset_request">Add requests in settings</string>
    <string name="home">Home</string>
    <string name="delete_request">Delete request</string>
    <string name="deleted_request">Request deleted</string>
    <string name="add_blank_request">Request text field empty. No request added.</string>
    <string name="added_request">Added request %1s</string>
    <string name="delete_contact">Delete group</string>
    <string name="deleted_contact">Contact group deleted</string>
    <string name="add_blank_contact">Name text field empty. No contact group added.</string>
    <string name="added_contact">Added contact %1s</string>
    <string name="unset_contact">Add contact groups in settings</string>
</resources>
